'shell-command-buffer-name-async' store the default buffer names
for the output of shell commands.

** Support for '(box . SIZE)' 'cursor-type'.
By default, 'box' cursor always has a filled box shape.  But if you
specify 'cursor-type' to be '(box . SIZE)', the cursor becomes a hollow
box if the point is on an image larger than 'SIZE' pixels in any
dimension.

---
*** Improved language transliteration in Malayalam input methods.
Added a new Mozhi scheme.  The inapplicable ITRANS scheme is now
deprecated.  Errors in the Inscript method were corrected.


* Editing Changes in Emacs 28.1

+++
** New command 'undo-redo'.
It undoes previous undo commands, but doesn't record itself as an
undoable command.

+++
** 'read-number' now has its own history variable.
Additionally, the function now accepts a HIST argument which can be
used to specify a custom history variable.

+++
** Input history for 'goto-line' is now local to every buffer.
Each buffer will keep a separate history of line numbers used with
'goto-line'.  This should help making faster the process of finding
line numbers that were previously jumped to.

+++
** When 'suggest-key-bindings' is non-nil, the completion list of 'M-x'
shows equivalent key bindings for all commands that have them.

---
** Movement commands in 'gomoku-mode' are fixed.
'gomoku-move-sw' and 'gomoku-move-ne' now work correctly, and
horizontal movements now stop at the edge of the board.

** Autosaving via 'auto-save-visited-mode' can now be inhibited by
setting the variable 'auto-save-visited-mode' buffer-locally to nil.

** New commands to describe buttons and widgets have been added.
'widget-describe' (on a widget) will pop up a help buffer and give a
description of the properties.  Likewise 'button-describe' does the
same for a button.


* Changes in Specialized Modes and Packages in Emacs 28.1

** Windows

*** The key prefix 'C-x 4 1' displays next command buffer in the same window.